# cb-detr

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
cbdetr/: __init__.py  eval.py  infer.py
cbdetr/cli/: eval.py  infer.py  train.py
cbdetr/dataset/: dataset.py
cbdetr/loss/: classification_loss_objectness.py  compute_loss.py  cuboid_kp_losses.py  hungarian_match_bbox.py  match_kp_permutation.py
cbdetr/models/: build_model.py  cbdetr.py  transformer.py
cbdetr/models/backbone/: __init__.py  backbone.py
cbdetr/models/ops/modules/: ms_deform_attn.py
cbdetr/models/util/: position_encoding.py
cbdetr/util/: batch_utils.py  box_ops.py  ckpt_utils.py  cuboid_topology.py
